<resources>
    <string name="app_name">News Feed</string>

    <!-- Bottom nav titles -->
    <string name="title_news_list">All feeds</string>
    <string name="title_groups">Groups</string>
    <string name="title_saved_news">Saved</string>

    <!-- Nav Fragments labels -->
    <string name="label_all_feeds_fragment">Latest News</string>
    <string name="label_groups_fragment">Groups</string>
    <string name="label_saved_news_fragment">Saved News</string>
    <string name="label_article_fragment">ArticleFragment</string>

    <!-- NewsListFragment -->
    <string name="menu_item_string_refresh">Refresh</string>
    <string name="news_list_error_screen_text">Some error occurred while loading news</string>
    <string name="offline_mode">It seems you are currently offline. \n Please restore your internet connection.</string>

    <!-- GroupsFragment -->
    <string name="groups_image_desc">source image</string>

    <!-- ArticleFragment -->
    <string name="article_error_screen_desc">error screen image</string>
    <string name="article_error_screen_text"><b>Ooooops!</b> \n Some error occurred while loading URL</string>
    <string name="article_error_try_again">Try again</string>

    <!-- SavedNewsFragment -->
    <string name="saved_news_empty_screen_desc">empty screen image</string>
    <string name="saved_news_empty_screen_text_header">You have no saved news yet.</string>
    <string name="saved_news_empty_screen_text_body">To save article, navigate to all feeds \n and press bookmark icon</string>

    <!-- Error Fragment -->
    <string name="error_dialog_title">An error occurred</string>
    <string name="error_dialog_message">Failed to load news. Cause:</string>

    <!-- NewsList RecyclerView item -->
    <string name="source_name_nyt">The New York Times</string>
    <string name="source_name_cnn">CNN</string>
    <string name="source_name_wired">WIRED</string>
    <string name="news_item_date_icon_desc">date of publication</string>
    <string name="news_item_image_desc">image provided by source</string>
    <string name="news_item_bookmark_desc">image to save article</string>

    <!-- PopupWindow -->
    <string name="popup_tap_to_update">Tap to update the feed</string>
    <string name="popup_image_desc">"popup window image</string>

    <!-- Toasts -->
    <string name="failed_to_connect_with_db">Some error occurred while processing your request</string>

    <!-- SnackBars -->
    <string name="article_saved">Saved successfully</string>
    <string name="article_deleted">Article successfully deleted</string>
    <string name="undo">Undo</string>
</resources>
