<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_news_list">

    <fragment
        android:id="@+id/navigation_news_list"
        android:name="ua.com.foxminded.newsfeed.ui.news_list.NewsListFragment"
        android:label="@string/title_news_list"
        tools:layout="@layout/fragment_news_list" />

    <fragment
        android:id="@+id/navigation_groups"
        android:name="ua.com.foxminded.newsfeed.ui.groups.GroupsFragment"
        android:label="@string/title_groups"
        tools:layout="@layout/fragment_groups" />

    <fragment
        android:id="@+id/navigation_saved_news"
        android:name="ua.com.foxminded.newsfeed.ui.saved_news.SavedNewsFragment"
        android:label="@string/title_saved_news"
        tools:layout="@layout/fragment_saved_news" />
</navigation>